syntax = "proto3";

package auth;

service AuthService {
  rpc AuthenticateUser (Register) returns (RegisterResponse);
}

message Register {
  string name = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}

message RegisterResponse {
  int32 status = 1;
  string msg = 2;
  string token = 3;
}
